--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -31,13 +31,21 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/myButton"
-        android:id="@+id/myButton"
-        android:layout_marginTop="55dp"
+        android:text="@string/myButton1"
+        android:id="@+id/myButton1"
+        android:layout_marginTop="56dp"
         android:layout_below="@+id/myTextView"
-        android:layout_centerHorizontal="true" />
+        android:layout_toLeftOf="@+id/myTextView"
+        android:layout_toStartOf="@+id/myTextView" />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/myButton2"
+        android:id="@+id/myButton2"
+        android:layout_alignBottom="@+id/myButton1"
+        android:layout_toRightOf="@+id/myTextView"
+        android:layout_toEndOf="@+id/myTextView" />
 
 
 </RelativeLayout>
